Provide PATCH /predictions/{candidate} route to dismiss prediction
